V1.1.8 - Backend completo
