# Backend/src/routes/UserRouter.ts
@@ -11,6 +11,7 @@ import {
 import { authMiddleware } from "../middleware/authMiddleware";
 import multer from "multer"; // <— adicionado
 const upload = multer({ storage: multer.memoryStorage(), limits: { fileSize: 10 * 1024 * 1024 } }); // 10MB
+import { listAdminNotifications } from "../controllers/AdminNotificationController";
 
 const router = express.Router();
 
@@ -22,5 +23,6 @@ router.get("/users/:id", authMiddleware, getUserById);
 router.get("/users/:id/item", authMiddleware, getUserItems);
 router.put("/users/:id", authMiddleware, upload.single("file"), updateUser); // <— aceita file
 router.delete("/users/:id", authMiddleware, destroyUserById);
+router.get("/admin/notifications", authMiddleware, listAdminNotifications);
 
 export default router;
